tests/invalid/bad_priv.s
  .text

  .global _start
_start:
  mode halt